source editor NEW

--- a/server/build-server-Desktop-Debug/Makefile
+++ b/server/build-server-Desktop-Debug/Makefile
@@ -52,13 +52,17 @@ OBJECTS_DIR   = ./
 
 SOURCES       = ../server/main.cpp \
 		../server/mainwindow.cpp \
-		../server/parawin.cpp moc_mainwindow.cpp \
-		moc_parawin.cpp
+		../server/parawin.cpp \
+		../server/sourcewin.cpp moc_mainwindow.cpp \
+		moc_parawin.cpp \
+		moc_sourcewin.cpp
 OBJECTS       = main.o \
 		mainwindow.o \
 		parawin.o \
+		sourcewin.o \
 		moc_mainwindow.o \
-		moc_parawin.o
+		moc_parawin.o \
+		moc_sourcewin.o
 DIST          = ../data/enum.xml \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
@@ -120,6 +124,7 @@ DIST          = ../data/enum.xml \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/qt_config.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_post.prf \
+		../server/.qmake.stash \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exclusive_builds.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/toolchain.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/default_pre.prf \
@@ -140,9 +145,11 @@ DIST          = ../data/enum.xml \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
 		../server/server.pro ../server/mainwindow.h \
-		../server/parawin.h ../server/main.cpp \
+		../server/parawin.h \
+		../server/sourcewin.h ../server/main.cpp \
 		../server/mainwindow.cpp \
-		../server/parawin.cpp
+		../server/parawin.cpp \
+		../server/sourcewin.cpp
 QMAKE_TARGET  = server
 DESTDIR       = 
 TARGET        = server
@@ -214,6 +221,7 @@ Makefile: ../server/server.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/q
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/qt_config.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exclusive_builds.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/toolchain.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/default_pre.prf \
@@ -300,6 +308,7 @@ Makefile: ../server/server.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/q
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/qt_config.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_post.prf:
+.qmake.stash:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exclusive_builds.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/toolchain.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/default_pre.prf:
@@ -340,8 +349,8 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents ../server/mainwindow.h ../server/parawin.h $(DISTDIR)/
-	$(COPY_FILE) --parents ../server/main.cpp ../server/mainwindow.cpp ../server/parawin.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents ../server/mainwindow.h ../server/parawin.h ../server/sourcewin.h $(DISTDIR)/
+	$(COPY_FILE) --parents ../server/main.cpp ../server/mainwindow.cpp ../server/parawin.cpp ../server/sourcewin.cpp $(DISTDIR)/
 	$(COPY_FILE) --parents ../server/mainwindow.ui $(DISTDIR)/
 
 
@@ -374,9 +383,9 @@ compiler_moc_predefs_clean:
 moc_predefs.h: /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
 	g++ -pipe -g -std=gnu++11 -Wall -W -dM -E -o moc_predefs.h /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
 
-compiler_moc_header_make_all: moc_mainwindow.cpp moc_parawin.cpp
+compiler_moc_header_make_all: moc_mainwindow.cpp moc_parawin.cpp moc_sourcewin.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_mainwindow.cpp moc_parawin.cpp
+	-$(DEL_FILE) moc_mainwindow.cpp moc_parawin.cpp moc_sourcewin.cpp
 moc_mainwindow.cpp: ../../include/opencvd_types.hpp \
 		../server/mainwindow.h \
 		moc_predefs.h \
@@ -389,6 +398,13 @@ moc_parawin.cpp: ../server/mainwindow.h \
 		moc_predefs.h \
 		/usr/lib/qt5/bin/moc
 	/usr/lib/qt5/bin/moc $(DEFINES) --include ./moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ulrich/c_source/opencv/mysource/with_qt/opencv_d/OpenCVD/server/server -I/home/ulrich/c_source/opencv/mysource/with_qt/opencv_d/OpenCVD/include -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtNetwork -I/usr/include/x86_64-linux-gnu/qt5/QtXml -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/7 -I/usr/include/x86_64-linux-gnu/c++/7 -I/usr/include/c++/7/backward -I/usr/lib/gcc/x86_64-linux-gnu/7/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/7/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include ../server/parawin.h -o moc_parawin.cpp
+
+moc_sourcewin.cpp: ../server/mainwindow.h \
+		../../include/opencvd_types.hpp \
+		../server/sourcewin.h \
+		moc_predefs.h \
+		/usr/lib/qt5/bin/moc
+	/usr/lib/qt5/bin/moc $(DEFINES) --include ./moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/ulrich/c_source/opencv/mysource/with_qt/opencv_d/OpenCVD/server/server -I/home/ulrich/c_source/opencv/mysource/with_qt/opencv_d/OpenCVD/include -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtNetwork -I/usr/include/x86_64-linux-gnu/qt5/QtXml -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/7 -I/usr/include/x86_64-linux-gnu/c++/7 -I/usr/include/c++/7/backward -I/usr/lib/gcc/x86_64-linux-gnu/7/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/7/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include ../server/sourcewin.h -o moc_sourcewin.cpp
 
 compiler_moc_source_make_all:
 compiler_moc_source_clean:
@@ -413,9 +429,10 @@ main.o: ../server/main.cpp ../server/mainwindow.h \
 		../../include/opencvd_types.hpp
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../server/main.cpp
 
-mainwindow.o: ../server/mainwindow.cpp ../server/parawin.h \
+mainwindow.o: ../server/mainwindow.cpp ../server/sourcewin.h \
 		../server/mainwindow.h \
 		../../include/opencvd_types.hpp \
+		../server/parawin.h \
 		ui_mainwindow.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o mainwindow.o ../server/mainwindow.cpp
 
@@ -424,11 +441,20 @@ parawin.o: ../server/parawin.cpp ../server/mainwindow.h \
 		../server/parawin.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o parawin.o ../server/parawin.cpp
 
+sourcewin.o: ../server/sourcewin.cpp ../server/mainwindow.h \
+		../../include/opencvd_types.hpp \
+		../server/parawin.h \
+		../server/sourcewin.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o sourcewin.o ../server/sourcewin.cpp
+
 moc_mainwindow.o: moc_mainwindow.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_mainwindow.o moc_mainwindow.cpp
 
 moc_parawin.o: moc_parawin.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_parawin.o moc_parawin.cpp
+
+moc_sourcewin.o: moc_sourcewin.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_sourcewin.o moc_sourcewin.cpp
 
 ####### Install
 
