--- a/samples/short_sample/Makefile
+++ b/samples/short_sample/Makefile
@@ -24,9 +24,8 @@ LDFLAGS += -L/usr/local/lib \
 -lopencv_video \
 -lopencv_videoio \
 -lopencv_features2d \
--lm \
--lpthread \
--lrt
+-lpthread 
+
 
 FILENAME = short_sample
 BUILDFILE = $(FILENAME)
