pkg-config --libs opencv included

--- a/samples/basic/build-basic_app-Desktop-Debug/Makefile
+++ b/samples/basic/build-basic_app-Desktop-Debug/Makefile
@@ -15,7 +15,7 @@ CXX           = g++
 DEFINES       = -DQT_QML_DEBUG
 CFLAGS        = -pipe -g -Wall -W -fPIC $(DEFINES)
 CXXFLAGS      = -pipe -g -Wall -W -fPIC $(DEFINES)
-INCPATH       = -I../basic_app -I. -I../../../include -isystem /usr/local/include/opencv -isystem /usr/local/include/opencv2 -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++
+INCPATH       = -I../basic_app -I. -isystem /usr/local/include/opencv -isystem /usr/local/include/opencv2 -I../../../include -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++
 QMAKE         = /usr/lib/qt5/bin/qmake
 DEL_FILE      = rm -f
 CHK_DIR_EXISTS= test -d
@@ -38,7 +38,7 @@ DISTNAME      = basic_app1.0.0
 DISTDIR = /home/ulrich/c_source/opencv/mysource/with_qt/opencv_d/OpenCVD/samples/basic/build-basic_app-Desktop-Debug/.tmp/basic_app1.0.0
 LINK          = g++
 LFLAGS        = 
-LIBS          = $(SUBLIBS) -L/usr/local/lib -lopencv_core -lopencv_imgcodecs -lopencv_highgui -lopencv_imgproc -lopencv_video -lopencv_videoio -lpthread 
+LIBS          = $(SUBLIBS) -L/usr/local/lib -lpthread -lopencv_core -lopencv_imgcodecs -lopencv_highgui -lopencv_imgproc -lopencv_video -lopencv_videoio 
 AR            = ar cqs
 RANLIB        = 
 SED           = sed
