--- a/samples/Makefile
+++ b/samples/Makefile
@@ -2,7 +2,7 @@
 .PHONY: clean
 
 all:
-	$(MAKE)  -C basic/build-basic_app-Desktop-Debug/
+	$(MAKE)  -C basic/
 	$(MAKE)  -C edge/
 	$(MAKE)  -C filtering/
 	$(MAKE)  -C findcontours/
@@ -10,7 +10,7 @@ all:
 	$(MAKE)  -C short_sample/
 	$(MAKE)  -C demhist/
 clean:
-	$(MAKE)  -C basic/build-basic_app-Desktop-Debug/  clean
+	$(MAKE)  -C basic/  clean
 	$(MAKE)  -C edge/  clean
 	$(MAKE)  -C filtering/  clean
 	$(MAKE)  -C findcontours/  clean
