--- a/server/build-server-Desktop-Debug/Makefile
+++ b/server/build-server-Desktop-Debug/Makefile
@@ -64,6 +64,7 @@ OBJECTS       = main.o \
 		moc_parawin.o \
 		moc_sourcewin.o
 DIST          = ../data/enum.xml \
+		../data/param.xml \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/linux.conf \
