--- a/samples/Makefile
+++ b/samples/Makefile
@@ -1,7 +1,18 @@
 
 .PHONY: clean
 
-all:
+all:	
+ifdef cv4
+	$(MAKE)  cv4=1 -C basic/
+	$(MAKE)  cv4=1 -C edge/
+	$(MAKE)  cv4=1 -C filtering/
+	$(MAKE)  cv4=1 -C findcontours/
+	$(MAKE)  cv4=1 -C imread/
+	$(MAKE)  cv4=1 -C short_sample/
+	$(MAKE)  cv4=1 -C demhist/
+	$(MAKE)  cv4=1 -C HoughCircles/
+	$(MAKE)  cv4=1 -C HoughLines/
+else
 	$(MAKE)  -C basic/
 	$(MAKE)  -C edge/
 	$(MAKE)  -C filtering/
@@ -11,6 +22,8 @@ all:
 	$(MAKE)  -C demhist/
 	$(MAKE)  -C HoughCircles/
 	$(MAKE)  -C HoughLines/
+endif
+
 clean:
 	$(MAKE)  -C basic/  clean
 	$(MAKE)  -C edge/  clean
