--- a/samples/filtering/Makefile
+++ b/samples/filtering/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-# gnu++11 uses GNU extensions.
+# --- gnu++11 uses GNU extensions. ---
 # FLAGS = --std=gnu++11
 FLAGS = --std=c++11
 
@@ -8,11 +8,21 @@ OPENCVD += ../../include/opencvd_basic.hpp
 OPENCVD += ../../include/opencvd_func.hpp
 OPENCVD += ../../include/opencvd_types.hpp
 
+# ---- set pkg-config file -----
+# Example OpenCV 4.x: make cv4=1
+
+OPENCV_LIBS = opencv
+
+ifdef cv4
+OPENCV_LIBS = opencv4
+endif
+
+
 CFLAGS = -Wall -c -O0 -DNDEBUG
-CFLAGS += $(shell pkg-config --cflags opencv)
+CFLAGS += $(shell pkg-config --cflags $(OPENCV_LIBS))
 CFLAGS += -I../../include \
 
-LDFLAGS += $(shell pkg-config --libs opencv)
+LDFLAGS += $(shell pkg-config --libs $(OPENCV_LIBS))
 LDFLAGS += -lpthread
 
 FILENAME = filtering
@@ -25,13 +35,16 @@ QUELLE = $(SOURCE)  $(HEADER)
 OBJ = $(FILENAME).o
 BIN = $(BUILDFILE)
 
+.PHONEY: all
+all: $(BIN)
+
 $(BIN): $(OBJ)
-	$(CC) -o $(BIN) $(OBJ) $(LDFLAGS)
+	$(CC) -o $@ $< $(LDFLAGS) 
 
 $(OBJ): $(SOURCE) $(HEADER) $(OPENCVD)
-	$(CC) $(CFLAGS) $(FLAGS) $(INC) $(SOURCE)
+	$(CC) $(CFLAGS) $(FLAGS) $(INC) $<
 
-.PHONEY:	clean
+.PHONEY: clean
 clean:	
 	$(RM) -r -f $(OBJ)	
 	$(RM) -r -f $(BUILDFILE)
