--- a/samples/HoughCircles/Makefile
+++ b/samples/HoughCircles/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-# gnu++11 uses GNU extensions.
+# --- gnu++11 uses GNU extensions. ---
 # FLAGS = --std=gnu++11
 FLAGS = --std=c++11
 
@@ -8,15 +8,25 @@ OPENCVD += ../../include/opencvd_basic.hpp
 OPENCVD += ../../include/opencvd_func.hpp
 OPENCVD += ../../include/opencvd_types.hpp
 
+# ---- set pkg-config file -----
+# Example OpenCV 4.x: make cv4=1
+
+OPENCV_LIBS = opencv
+
+ifdef cv4
+OPENCV_LIBS = opencv4
+endif
+
+
 CFLAGS = -Wall -c -O0 -DNDEBUG
-CFLAGS += $(shell pkg-config --cflags opencv)
+CFLAGS += $(shell pkg-config --cflags $(OPENCV_LIBS))
 CFLAGS += -I../../include \
 
-LDFLAGS += $(shell pkg-config --libs opencv)
+LDFLAGS += $(shell pkg-config --libs $(OPENCV_LIBS))
 LDFLAGS += -lpthread
 
 FILENAME = HoughCircles
-BUILDFILE = HoughCircles
+BUILDFILE = $(FILENAME)
 
 SOURCE = $(FILENAME).cpp
 HEADER = 
@@ -24,6 +34,9 @@ QUELLE = $(SOURCE)  $(HEADER)
 
 OBJ = $(FILENAME).o
 BIN = $(BUILDFILE)
+
+.PHONEY: all
+all: $(BIN)
 
 $(BIN): $(OBJ)
 	$(CC) -o $@ $< $(LDFLAGS) 
