--- a/samples/filtering/Makefile
+++ b/samples/filtering/Makefile
@@ -6,6 +6,7 @@ FLAGS = --std=c++11
 OPENCVD = ../../include/opencvd.hpp
 OPENCVD += ../../include/opencvd_basic.hpp
 OPENCVD += ../../include/opencvd_func.hpp
+OPENCVD += ../../include/opencvd_mat.hpp
 OPENCVD += ../../include/opencvd_types.hpp
 
 # ---- get pkg-config files -----
