--- a/samples/Makefile
+++ b/samples/Makefile
@@ -12,7 +12,8 @@ SAMPLE_PATH = 	basic/ \
 		HoughLines/ \
                 buildPyramid/ \
                 LSD/ \
-		matchTemplate/
+                matchTemplate/ \
+                grabCut/
 
 
 all:	
