--- a/samples/Makefile
+++ b/samples/Makefile
@@ -13,7 +13,8 @@ SAMPLE_PATH = 	basic/ \
                 buildPyramid/ \
                 LSD/ \
                 matchTemplate/ \
-                grabCut/
+                grabCut/ \
+		matchShapes/
 
 
 all:	
