filter2D() and sepFilter2D() new

--- a/samples/Makefile
+++ b/samples/Makefile
@@ -14,8 +14,8 @@ SAMPLE_PATH = 	basic/ \
                 LSD/ \
                 matchTemplate/ \
                 grabCut/ \
-		matchShapes/
-
+		matchShapes/ \
+		sepFilter2D/
 
 all:	
 	for dir in $(SAMPLE_PATH); do \
